--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,19 +19,7 @@ jobs:
         node-version: [22.8.0]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
-    steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
-
-
-# Service containers to run with `container-job`
+ #Service containers to run with `container-job`
     services:
       # Label used to access the service container
       redis:
@@ -43,4 +31,16 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-          
+
+        ports: 
+        - 6379:6379
+    steps:
+    - uses: actions/checkout@v4
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
